src/assets/scss/basics/_general.scss
body {
    display: flex;
    justify-content: center;
    margin: 0;
    color: var(--primary-1);
}

mark {
    color: var(--primary-2);
    background-color: transparent;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

